--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,3 +7,19 @@ on:
 
 env:
   GO111MODULE: "on"
+
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ~1.19
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Linters
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.41.1
+          working-directory: ./
