--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,26 +1,20 @@
 name: Release cropper binaries
 
 on:
-  push:
+  release:
     types: [created]
-    branches:
-      - master
-      - work_in_progress
 
 jobs:
   releases-image-crop:
     name: Release Go Binary
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Run tests
-        run: go test -v -p=1 -timeout=0 ./...
-      - uses: wangyoucao577/go-release-action@v1.19
+      - uses: actions/checkout@v3
+      - uses: wangyoucao577/go-release-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: linux
           goarch: amd64
-          project_path: "./"
           binary_name: "image_crop"
           ldflags: "-s -w"
           extra_files: README.md
