--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,12 +8,16 @@ jobs:
   releases-image-crop:
     name: Release Go Binary
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        goos: [ linux ]
+        goarch: [ amd64 ]
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - uses: wangyoucao577/go-release-action@v1.35
         with:
-          go-version: 1.16
-
-      - name: Build
-        run: go build -v ./...
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          binary_name: "image_crop"
+          extra_files: README.md
