--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,18 +7,12 @@ on:
 jobs:
   releases-image-crop:
     name: Release Go Binary
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        goos: [ linux ]
-        goarch: [ amd64 ]
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: wangyoucao577/go-release-action@v1.26
+      - name: Set up Go
+        uses: actions/setup-go@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          goos: ${{ matrix.goos }}
-          goarch: ${{ matrix.goarch }}
-          goversion: "https://dl.google.com/go/go1.16.10.linux-amd64.tar.gz"
-          binary_name: "image_crop"
-          extra_files: README.md
+          go-version: 1.16
+
+      - name: Build
+        run: go build -v ./...
